--- a/Nodejs_Udemy_course/express/public/css/product.css
+++ b/Nodejs_Udemy_course/express/public/css/product.css
@@ -6,12 +6,14 @@
 }
 
 .form-control label,
-.form-control input {
+.form-control input,
+.form-control textarea {
   display: block;
   width: 100%;
 }
 
-.form-control input {
+.form-control input,
+.form-control textarea {
   border: 1px solid #006b4b;
   font: inherit;
   border-radius: 2px;
@@ -27,6 +29,10 @@ button {
   border-radius: 3px;
   cursor: pointer;
   padding: 4px;
+}
+.form-control input:focus,
+.form-control textarea:focus {
+  outline-color: #006b4b;
 }
 
 button:hover,
