--- a/Nodejs_Udemy_course/express/views/admin/add-product.ejs
+++ b/Nodejs_Udemy_course/express/views/admin/add-product.ejs
@@ -11,6 +11,18 @@
           <label for="title">Title</label>
           <input type="text" name="title" id="title" />
         </div>
+        <div class="form-control">
+          <label for="imgURL">Image URL</label>
+          <input type="text" name="imgURL" id="imgURL" />
+        </div>
+        <div class="form-control">
+          <label for="description">Description</label>
+          <textarea name="description" id="description" rows="5"></textarea>
+        </div>
+        <div class="form-control">
+          <label for="price">Price</label>
+          <input type="number" name="price" id="price" />
+        </div>
         <button type="submit">Add Product</button>
       </form>
     </main>
