--- a/Nodejs_Udemy_course/express/views/shop/index.ejs
+++ b/Nodejs_Udemy_course/express/views/shop/index.ejs
@@ -2,5 +2,33 @@
   </head>
   <body>
     <%- include('../includes/nav'); %>
-    <h1>Index Page</h1>
+    <main>
+      <% if (prods.length > 0) { %>
+        <h1 class="center">All Products</h1>
+      <div class="grid">
+        <% for(let product of prods) { %>
+        <article class="card product-item">
+          <header class="card__header">
+            <h1><%= product.title %></h1>
+          </header>
+          <div class="card__image">
+            <img
+              src="<%= product.imgURL %>"
+              alt="<%= product.title %>"
+            />
+          </div>
+          <div class="card__content">
+            <h2 class="product__price">$<%= product.price %></h2>
+            <div class="product__description"><%= product.description %></div>
+          </div>
+          <div class="card__actions">
+            <button class="btn">Add to Cart</button>
+          </div>
+        </article>
+        <% } %>
+      </div>
+      <% } else { %>
+      <h1 class="center">No Product Found!!</h1>
+      <% } %>
+    </main>
     <%- include('../includes/end'); %>
