--- a/Nodejs_Udemy_course/express/views/shop/product-list.ejs
+++ b/Nodejs_Udemy_course/express/views/shop/product-list.ejs
@@ -13,13 +13,13 @@
           </header>
           <div class="card__image">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbqa6TB1LIW9aYRgQPqZ5MjWDZS6p-vENLcw&usqp=CAU"
-              alt="pexels"
+              src="<%= product.imgURL %>"
+              alt="<%= product.title %>"
             />
           </div>
           <div class="card__content">
-            <h2 class="product__price">$12</h2>
-            <div class="product__description">A unique breakfast for you!</div>
+            <h2 class="product__price">$<%= product.price %></h2>
+            <div class="product__description"><%= product.description %></div>
           </div>
           <div class="card__actions">
             <button class="btn">Add to Cart</button>
