--- a/Nodejs_Udemy_course/express/views/shop/index.ejs
+++ b/Nodejs_Udemy_course/express/views/shop/index.ejs
@@ -21,7 +21,7 @@
             <div class="product__description"><%= product.description %></div>
           </div>
           <div class="card__actions">
-            <button class="btn">Add to Cart</button>
+            <%- include('../includes/add-to-cart' , {product: product}); %>
           </div>
         </article>
         <% } %>
