--- a/Nodejs_Udemy_course/express/views/shop/product-list.ejs
+++ b/Nodejs_Udemy_course/express/views/shop/product-list.ejs
@@ -22,7 +22,7 @@
           </div>
           <div class="card__actions">
             <a href="/product/<%= product.id %>" class="btn"> Details</a>
-            <button class="btn">Add to Cart</button>
+            <%- include('../includes/add-to-cart', {product: product}); %>
           </div>
         </article>
         <% } %>
