--- a/Nodejs_Udemy_course/express/views/admin/products.ejs
+++ b/Nodejs_Udemy_course/express/views/admin/products.ejs
@@ -23,7 +23,7 @@
             <div class="product__description"><%= product.description %></div>
           </div>
           <div class="card__actions">
-            <a href="/api/admin/edit-product" class="btn">Edit</a>
+            <a href="/api/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
             <form action="/api/admin/delete-product" method="POST">
               <button type="submit" class="btn">Delete</button>
             </form>
