--- a/Nodejs_Udemy_course/express/views/shop/cart.ejs
+++ b/Nodejs_Udemy_course/express/views/shop/cart.ejs
@@ -6,7 +6,15 @@
       <% if(products.length > 0 ) { %>
           <ul>
             <% products.forEach(item => { %>
-              <li><%= item.productData.title %> (<%= item.qty %>)</li>
+              <li>
+                <p>
+                  <%= item.productData.title %> (<%= item.qty %>)
+                </p>
+                <form action="/cart-delete-item" method="POST">
+                  <input type="hidden" name="productId" value="<%= item.productData.id %>">
+                  <button class="btn" type="submit">Delete</button>
+                </form>
+              </li>
               <% }) %>
           </ul>
         <% } else { %>
